# private-battleship

./: .gitignore  ARCHITECTURE.md  Anchor.toml  CLAUDE.md  README.md
.claude/: settings.local.json
app/: README.md  package-lock.json  package.json
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/components/: BattleGrid.tsx  BattlePhase.tsx  DebugLogButton.tsx  GameBackground.tsx  GameLobby.tsx  HeroVideo.tsx  PlacementPhase.tsx  ResultPhase.tsx  TransactionLog.tsx  wallet-provider.tsx
app/src/hooks/: useGame.ts
app/src/lib/: debug-logger.ts  idl.json  oracle.ts  program.ts  sfx.ts  tee-connection.ts
battleship/app/: package.json
battleship/app/src/app/: globals.css  layout.tsx  page.tsx
battleship/app/src/components/: BattleGrid.tsx  GameLobby.tsx  TransactionLog.tsx  wallet-provider.tsx
battleship/app/src/hooks/: useGame.ts
battleship/app/src/lib/: board-hash.ts  idl.json  oracle.ts  tee-connection.ts
battleship/programs/battleship/: Cargo.toml
battleship/programs/battleship/src/: lib.rs
programs/battleship/src/: lib.rs
