[package]
name = "battleship"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "battleship"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []


[dependencies]
anchor-lang = { version = "=0.32.1", features = ["init-if-needed"] }
ephemeral-rollups-sdk = { version = "=0.8.6", features = ["anchor", "disable-realloc", "access-control"] }
ephemeral-vrf-sdk = { version = "=0.2.3", features = ["anchor"] }
solana-program = "=2.2.1"


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
